Bug#40346 - correction for embedded